--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,20 @@
 spring.application.name=demo
+
+# Server
 server.port=9001
 
-# H2 Database config
+# ===============================
+# H2 DATABASE CONFIG (FIX)
+# ===============================
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=Amypo
 
-# JPA config
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Enable H2 console
+# H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
