--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
+# Application
 spring.application.name=demo
-
-# Server
 server.port=9001
 
-# ===============================
-# H2 DATABASE CONFIG (FIX)
-# ===============================
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+# MySQL Database (Auto-create DB if not exists)
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Amypo
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# JWT Configuration
+app.jwtSecret=MyVeryStrongSecretKeyForJwtToken123456789
+app.jwtExpirationMs=3600000
